tests/files/type_checker_tests/should_pass/241.cmdr
//Test that lambdas type check
add = fn (): int -> 1 + 2;
add();
x = add();
