tests/files/type_checker_tests/should_fail/220.cmdr
//Test that this doesn't type check due to conflicting return types
fn add(): int 1 + 2;
add();
x = add();
